--- a/SimpleNote.Models/SimpleNote.Models.csproj
+++ b/SimpleNote.Models/SimpleNote.Models.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NoteCreate.cs" />
     <Compile Include="NoteListItem.cs" />
+    <Compile Include="NoteUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
