--- a/SimpleNote.Models/SimpleNote.Models.csproj
+++ b/SimpleNote.Models/SimpleNote.Models.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NoteCreate.cs" />
+    <Compile Include="NoteDetail.cs" />
     <Compile Include="NoteListItem.cs" />
     <Compile Include="NoteUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
