Edit view and overloaded controller method added

--- a/SimpleNote.Models/SimpleNote.Models.csproj
+++ b/SimpleNote.Models/SimpleNote.Models.csproj
@@ -56,8 +56,8 @@
   <ItemGroup>
     <Compile Include="NoteCreate.cs" />
     <Compile Include="NoteDetail.cs" />
+    <Compile Include="NoteEdit.cs" />
     <Compile Include="NoteListItem.cs" />
-    <Compile Include="NoteUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
